--- a/package.json
+++ b/package.json
@@ -14,5 +14,10 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "qrcode.react": "^3.1.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.4.5",
+    "@types/react": "^18.3.3",
+    "@types/node": "^20.14.9"
   }
 }
